--- a/src/Services/Catalog/Catalog.Api/Catalog.Api.csproj
+++ b/src/Services/Catalog/Catalog.Api/Catalog.Api.csproj
@@ -13,6 +13,7 @@
   <ItemGroup>
     <PackageReference Include="Carter" Version="8.2.1" />
     <PackageReference Include="DotNetEnv" Version="3.1.1" />
+    <PackageReference Include="Marten" Version="8.5.0" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="../../../BuildingBlocks/BuildingBlocks/BuildingBlocks.csproj" />
