--- a/src/Services/Catalog/Catalog.Api/appsettings.json
+++ b/src/Services/Catalog/Catalog.Api/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "Database": "Server=localhost;Port=5432;Database=catalogdb;User Id=postgres;Password=Abcd@12345;Include Error Detail=true"
+  },
   "AllowedHosts": "*"
 }
