--- a/src/Services/Catalog/Catalog.Api/appsettings.json
+++ b/src/Services/Catalog/Catalog.Api/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "Database": "Server=localhost;Port=5432;Database=catalogdb;User Id=postgres;Password=Abcd@12345;Include Error Detail=true"
+    "Database": "Server=localhost;Port=5432;Database=CatalogDb;User Id=postgres;Password=password;Include Error Detail=true"
   },
   "AllowedHosts": "*"
 }
