--- a/src/docker-compose.override.yaml
+++ b/src/docker-compose.override.yaml
@@ -1,15 +1,20 @@
 services:
-  #  catalog.api:
-  #    environment:
-  #      - ASPNETCORE_ENVIRONMENT=Development
-  #      - ASPNETCORE_HTTP_PORTS=8080
-  #      - ASPNETCORE_HTTPS_PORTS=8081
-  #    ports:
-  #      - "8080"
-  #      - "8081"
-  #    volumes:
-  #      - ${APPDATA}/Microsoft/UserSecrets:/home/app/.microsoft/usersecrets:ro
-  #      - ${APPDATA}/Microsoft/ASP.NET/Https:/home/app/.aspnet/https:ro
+  catalog.api:
+    environment:
+      - ASPNETCORE_ENVIRONMENT=Development
+      - ASPNETCORE_HTTP_PORTS=8080
+      - ASPNETCORE_HTTPS_PORTS=8081
+      - Kestrel__EndPoints__WebApi__Protocols=Http1
+      - Kestrel__EndPoints__WebApi__Url=http://+:8080
+      - ConnectionStrings__Database=Server=catalogdb;Port=5432;Database=CatalogDb;User Id=postgres;Password=password;Include Error Detail=true
+    depends_on:
+      - catalogdb
+    ports:
+      - "6000:8080"
+      - "6060:8081"
+    volumes:
+      - ${APPDATA}/Microsoft/UserSecrets:/home/app/.microsoft/usersecrets:ro
+      - ${APPDATA}/ASP.NET/Https:/home/app/.aspnet/https:ro
   
   catalogdb:
     container_name: catalogdb
