--- a/src/docker-compose.yaml
+++ b/src/docker-compose.yaml
@@ -1,9 +1,9 @@
 ﻿services:
-  #  catalog.api:
-  #    image: catalog.api
-  #    build:
-  #      context: .
-  #      dockerfile: Services/Catalog/Catalog.Api/Dockerfile
+  catalog.api:
+    image: ${DOCKER_REGISTRY-}catalog.api
+    build:
+      context: .
+      dockerfile: Services/Catalog/Catalog.Api/Dockerfile
   
   catalogdb:
     image: postgres
