feat(basket): :sparkles: add Basket.Api service with Docker configuration and initial setup

--- a/src/docker-compose.yaml
+++ b/src/docker-compose.yaml
@@ -5,8 +5,15 @@
       context: .
       dockerfile: Services/Catalog/Catalog.Api/Dockerfile
   
+  basket.api:
+    image: basket.api
+    build:
+      context: .
+      dockerfile: Services/Basket/Basket.Api/Dockerfile
+  
   catalogdb:
     image: postgres
 
 volumes:
   postgres_catalog:
+  
