--- a/src/Services/Basket/Basket.Api/Basket.Api.csproj
+++ b/src/Services/Basket/Basket.Api/Basket.Api.csproj
@@ -8,7 +8,10 @@
     </PropertyGroup>
 
     <ItemGroup>
-        
+        <Folder Include="Dtos\"/>
+        <Folder Include="Exceptions\"/>
+        <Folder Include="GrpcServices\"/>
+        <Folder Include="Protos\"/>
     </ItemGroup>
 
     <ItemGroup>
