--- a/src/Services/Basket/Basket.Api/Basket.Api.csproj
+++ b/src/Services/Basket/Basket.Api/Basket.Api.csproj
@@ -20,4 +20,12 @@
         </Content>
     </ItemGroup>
 
+    <ItemGroup>
+        <ProjectReference Include="..\..\..\BuildingBlocks\BuildingBlocks\BuildingBlocks.csproj"/>
+    </ItemGroup>
+
+    <ItemGroup>
+        <PackageReference Include="Carter" Version="8.2.1"/>
+    </ItemGroup>
+
 </Project>
