--- a/src/docker-compose.yaml
+++ b/src/docker-compose.yaml
@@ -13,7 +13,11 @@
   
   catalogdb:
     image: postgres
+  
+  basketdb:
+    image: postgres
 
 volumes:
   postgres_catalog:
+  postgres_basket:
   
