--- a/src/Services/Basket/Basket.Api/Basket.Api.csproj
+++ b/src/Services/Basket/Basket.Api/Basket.Api.csproj
@@ -26,6 +26,8 @@
     <ItemGroup>
         <PackageReference Include="Carter" Version="8.2.1"/>
         <PackageReference Include="Marten" Version="8.7.0"/>
+        <PackageReference Include="Microsoft.Extensions.Caching.StackExchangeRedis" Version="8.0.19"/>
+        <PackageReference Include="Scrutor" Version="6.1.0"/>
     </ItemGroup>
 
 </Project>
