--- a/src/docker-compose.override.yaml
+++ b/src/docker-compose.override.yaml
@@ -4,8 +4,8 @@ services:
       - ASPNETCORE_ENVIRONMENT=Development
       - ASPNETCORE_HTTP_PORTS=8080
       - ASPNETCORE_HTTPS_PORTS=8081
-      - ASPNETCORE_Kestrel__Certificates__Default__Password=pass
-      - ASPNETCORE_Kestrel__Certificates__Default__Path=/https/aspnetapp.pfx
+      #      - ASPNETCORE_Kestrel__Certificates__Default__Password=pass
+      #      - ASPNETCORE_Kestrel__Certificates__Default__Path=/https/aspnetapp.pfx
       - Kestrel__EndPoints__WebApi__Protocols=Http1
       - Kestrel__EndPoints__WebApi__Url=http://+:8080
       - ConnectionStrings__Database=Server=catalogdb;Port=5432;Database=CatalogDb;User Id=postgres;Password=password;Include Error Detail=true
@@ -15,10 +15,10 @@ services:
       - "6000:8080"
       - "6060:8081"
     volumes:
-      #      - ${APPDATA}/Microsoft/UserSecrets:/home/app/.microsoft/usersecrets:ro
-      #      - ${APPDATA}/ASP.NET/Https:/home/app/.aspnet/https:ro
-      - ~/.microsoft/usersecrets:/home/app/.microsoft/usersecrets:ro
-      - ~/.aspnet/https:/https:ro
+      - ${APPDATA}/Microsoft/UserSecrets:/home/app/.microsoft/usersecrets:ro
+      - ${APPDATA}/ASP.NET/Https:/home/app/.aspnet/https:ro
+  #      - ~/.microsoft/usersecrets:/home/app/.microsoft/usersecrets:ro
+  #      - ~/.aspnet/https:/https:ro
   
   catalogdb:
     container_name: catalogdb
@@ -43,3 +43,9 @@ services:
     restart: unless-stopped
     volumes:
       - postgres_basket:/var/lib/postgresql/data
+  
+  distributedcache:
+    container_name: distributedcache
+    restart: unless-stopped
+    ports:
+      - "6379:6379"
