--- a/src/docker-compose.yaml
+++ b/src/docker-compose.yaml
@@ -5,17 +5,20 @@
       context: .
       dockerfile: Services/Catalog/Catalog.Api/Dockerfile
   
-  basket.api:
-    image: basket.api
-    build:
-      context: .
-      dockerfile: Services/Basket/Basket.Api/Dockerfile
+  #  basket.api:
+  #    image: basket.api
+  #    build:
+  #      context: .
+  #      dockerfile: Services/Basket/Basket.Api/Dockerfile
   
   catalogdb:
     image: postgres
   
   basketdb:
     image: postgres
+  
+  distributedcache:
+    image: redis
 
 volumes:
   postgres_catalog:
