--- a/src/docker-compose.override.yaml
+++ b/src/docker-compose.override.yaml
@@ -20,6 +20,29 @@ services:
   #      - ~/.microsoft/usersecrets:/home/app/.microsoft/usersecrets:ro
   #      - ~/.aspnet/https:/https:ro
   
+  basket.api:
+    environment:
+      - ASPNETCORE_ENVIRONMENT=Development
+      - ASPNETCORE_HTTP_PORTS=8080
+      - ASPNETCORE_HTTPS_PORTS=8081
+      #      - ASPNETCORE_Kestrel__Certificates__Default__Password=pass
+      #      - ASPNETCORE_Kestrel__Certificates__Default__Path=/https/aspnetapp.pfx
+      - Kestrel__EndPoints__WebApi__Protocols=Http1
+      - Kestrel__EndPoints__WebApi__Url=http://+:8080
+      - ConnectionStrings__Database=Server=basketdb;Port=5432;Database=BasketDb;User Id=postgres;Password=password;Include Error Detail=true
+      - ConnectionStrings__Redis=distributedcache:6379
+    depends_on:
+      - basketdb
+      - distributedcache
+    ports:
+      - "6001:8080"
+      - "6061:8081"
+    volumes:
+      - ${APPDATA}/Microsoft/UserSecrets:/home/app/.microsoft/usersecrets:ro
+      - ${APPDATA}/ASP.NET/Https:/home/app/.aspnet/https:ro
+  #      - ~/.microsoft/usersecrets:/home/app/.microsoft/usersecrets:ro
+  #      - ~/.aspnet/https:/https:ro
+  
   catalogdb:
     container_name: catalogdb
     environment:
