--- a/src/docker-compose.yaml
+++ b/src/docker-compose.yaml
@@ -5,11 +5,11 @@
       context: .
       dockerfile: Services/Catalog/Catalog.Api/Dockerfile
   
-  #  basket.api:
-  #    image: basket.api
-  #    build:
-  #      context: .
-  #      dockerfile: Services/Basket/Basket.Api/Dockerfile
+  basket.api:
+    image: ${DOCKER_REGISTRY-}basket.api
+    build:
+      context: .
+      dockerfile: Services/Basket/Basket.Api/Dockerfile
   
   catalogdb:
     image: postgres
