--- a/src/docker-compose.override.yaml
+++ b/src/docker-compose.override.yaml
@@ -4,8 +4,10 @@ services:
       - ASPNETCORE_ENVIRONMENT=Development
       - ASPNETCORE_HTTP_PORTS=8080
       - ASPNETCORE_HTTPS_PORTS=8081
+      #      mac: start
       #      - ASPNETCORE_Kestrel__Certificates__Default__Password=pass
       #      - ASPNETCORE_Kestrel__Certificates__Default__Path=/https/aspnetapp.pfx
+      #      mac: end
       - Kestrel__EndPoints__WebApi__Protocols=Http1
       - Kestrel__EndPoints__WebApi__Url=http://+:8080
       - ConnectionStrings__Database=Server=catalogdb;Port=5432;Database=CatalogDb;User Id=postgres;Password=password;Include Error Detail=true
@@ -15,18 +17,22 @@ services:
       - "6000:8080"
       - "6060:8081"
     volumes:
-      - ${APPDATA}/Microsoft/UserSecrets:/home/app/.microsoft/usersecrets:ro
-      - ${APPDATA}/ASP.NET/Https:/home/app/.aspnet/https:ro
-  #      - ~/.microsoft/usersecrets:/home/app/.microsoft/usersecrets:ro
-  #      - ~/.aspnet/https:/https:ro
+      #      Linux
+      #      - ${APPDATA}/Microsoft/UserSecrets:/home/app/.microsoft/usersecrets:ro
+      #      - ${APPDATA}/ASP.NET/Https:/home/app/.aspnet/https:ro
+      #      Mac
+      - ${HOME}/.microsoft/usersecrets:/home/app/.microsoft/usersecrets:ro
+      - ${HOME}/.aspnet/https:/home/app/.aspnet/https:ro
   
   basket.api:
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
       - ASPNETCORE_HTTP_PORTS=8080
       - ASPNETCORE_HTTPS_PORTS=8081
+      #      mac: start
       #      - ASPNETCORE_Kestrel__Certificates__Default__Password=pass
       #      - ASPNETCORE_Kestrel__Certificates__Default__Path=/https/aspnetapp.pfx
+      #      mac: end
       - Kestrel__EndPoints__WebApi__Protocols=Http1
       - Kestrel__EndPoints__WebApi__Url=http://+:8080
       - ConnectionStrings__Database=Server=basketdb;Port=5432;Database=BasketDb;User Id=postgres;Password=password;Include Error Detail=true
@@ -38,10 +44,12 @@ services:
       - "6001:8080"
       - "6061:8081"
     volumes:
-      - ${APPDATA}/Microsoft/UserSecrets:/home/app/.microsoft/usersecrets:ro
-      - ${APPDATA}/ASP.NET/Https:/home/app/.aspnet/https:ro
-  #      - ~/.microsoft/usersecrets:/home/app/.microsoft/usersecrets:ro
-  #      - ~/.aspnet/https:/https:ro
+      #      Linux
+      #      - ${APPDATA}/Microsoft/UserSecrets:/home/app/.microsoft/usersecrets:ro
+      #      - ${APPDATA}/ASP.NET/Https:/home/app/.aspnet/https:ro
+      #      Mac
+      - ${HOME}/.microsoft/usersecrets:/home/app/.microsoft/usersecrets:ro
+      - ${HOME}/.aspnet/https:/home/app/.aspnet/https:ro
   
   catalogdb:
     container_name: catalogdb
