feat(discount): :sparkles: enhance DiscountService with CRUD operations and logging; add Mapster for model mapping
Signed-off-by: Abhiroop Santra <abhiroop43@users.noreply.github.com>

--- a/.gitignore
+++ b/.gitignore
@@ -418,3 +418,5 @@ FodyWeavers.xsd
 *.msp
 
 .idea/
+/src/Services/Discount/Discount.Grpc/DiscountDb-shm
+/src/Services/Discount/Discount.Grpc/DiscountDb-wal
