--- a/src/docker-compose.override.yaml
+++ b/src/docker-compose.override.yaml
@@ -51,6 +51,21 @@ services:
       - ${HOME}/.microsoft/usersecrets:/home/app/.microsoft/usersecrets:ro
       - ${HOME}/.aspnet/https:/home/app/.aspnet/https:ro
   
+  discount.grpc:
+    environment:
+      - ASPNETCORE_ENVIRONMENT=Development
+      - ASPNETCORE_HTTP_PORTS=8080
+      - ASPNETCORE_HTTPS_PORTS=8081
+      - Kestrel__Endpoints__Grpc__Url=http://0.0.0.0:8080
+      - Kestrel__Endpoints__Grpc__Protocols=Http2
+      - ConnectionStrings__Database=Data Source=/app/DiscountDb
+    ports:
+      - "6002:8080"
+      - "6062:8081"
+    volumes:
+      - ${HOME}/.microsoft/usersecrets:/home/app/.microsoft/usersecrets:ro
+      - ${HOME}/.aspnet/https:/home/app/.aspnet/https:ro
+  
   catalogdb:
     container_name: catalogdb
     environment:
