--- a/src/docker-compose.yaml
+++ b/src/docker-compose.yaml
@@ -4,18 +4,21 @@
     build:
       context: .
       dockerfile: Services/Catalog/Catalog.Api/Dockerfile
+    restart: unless-stopped
   
   basket.api:
     image: ${DOCKER_REGISTRY-}basket.api
     build:
       context: .
       dockerfile: Services/Basket/Basket.Api/Dockerfile
+    restart: unless-stopped
   
-  #  discount.grpc:
-  #    image: discount.grpc
-  #    build:
-  #      context: .
-  #      dockerfile: Services/Discount/Discount.Grpc/Dockerfile
+  discount.grpc:
+    image: ${DOCKER_REGISTRY-}discount.grpc
+    build:
+      context: .
+      dockerfile: Services/Discount/Discount.Grpc/Dockerfile
+    restart: unless-stopped
   
   catalogdb:
     image: postgres
