--- a/src/docker-compose.override.yaml
+++ b/src/docker-compose.override.yaml
@@ -58,13 +58,14 @@ services:
       - ASPNETCORE_HTTPS_PORTS=8081
       - Kestrel__Endpoints__Grpc__Url=http://0.0.0.0:8080
       - Kestrel__Endpoints__Grpc__Protocols=Http2
-      - ConnectionStrings__Database=Data Source=/app/DiscountDb
+      - ConnectionStrings__Database=Data Source=/app/db/DiscountDb.db
     ports:
       - "6002:8080"
       - "6062:8081"
     volumes:
       - ${HOME}/.microsoft/usersecrets:/home/app/.microsoft/usersecrets:ro
       - ${HOME}/.aspnet/https:/home/app/.aspnet/https:ro
+      - discountdb_data:/app/db
   
   catalogdb:
     container_name: catalogdb
