--- a/src/Services/Basket/Basket.Api/Basket.Api.csproj
+++ b/src/Services/Basket/Basket.Api/Basket.Api.csproj
@@ -28,9 +28,16 @@
         <PackageReference Include="AspNetCore.HealthChecks.Redis" Version="8.0.1"/>
         <PackageReference Include="AspNetCore.HealthChecks.UI.Client" Version="8.0.1"/>
         <PackageReference Include="Carter" Version="8.2.1"/>
+        <PackageReference Include="Grpc.AspNetCore" Version="2.71.0"/>
         <PackageReference Include="Marten" Version="8.7.0"/>
         <PackageReference Include="Microsoft.Extensions.Caching.StackExchangeRedis" Version="8.0.19"/>
         <PackageReference Include="Scrutor" Version="6.1.0"/>
+    </ItemGroup>
+
+    <ItemGroup>
+        <Protobuf Include="..\..\Discount\Discount.Grpc\Protos\discount.proto" GrpcServices="Client">
+            <Link>Protos\discount.proto</Link>
+        </Protobuf>
     </ItemGroup>
 
 </Project>
