--- a/src/docker-compose.override.yaml
+++ b/src/docker-compose.override.yaml
@@ -37,9 +37,11 @@ services:
       - Kestrel__EndPoints__WebApi__Url=http://+:8080
       - ConnectionStrings__Database=Server=basketdb;Port=5432;Database=BasketDb;User Id=postgres;Password=password;Include Error Detail=true
       - ConnectionStrings__Redis=distributedcache:6379
+      - GrpcSettings__DiscountUrl=http://discount.grpc:8080
     depends_on:
       - basketdb
       - distributedcache
+      - discount.grpc
     ports:
       - "6001:8080"
       - "6061:8081"
