--- a/src/Services/Order/Order.Api/Order.Api.csproj
+++ b/src/Services/Order/Order.Api/Order.Api.csproj
@@ -13,4 +13,9 @@
       </Content>
     </ItemGroup>
 
+    <ItemGroup>
+        <ProjectReference Include="..\Order.Application\Order.Application.csproj"/>
+        <ProjectReference Include="..\Order.Infrastructure\Order.Infrastructure.csproj"/>
+    </ItemGroup>
+
 </Project>
