--- a/src/Services/Order/Order.Domain/Order.Domain.csproj
+++ b/src/Services/Order/Order.Domain/Order.Domain.csproj
@@ -10,4 +10,9 @@
       <PackageReference Include="MediatR" Version="13.1.0" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Events\" />
+      <Folder Include="Exceptions\" />
+    </ItemGroup>
+
 </Project>
