feat(order): Added DbContext and entity configs
Introduced ApplicationDbContext and entity type configurations for Customer, Product, Order, and OrderItem. Registered the DbContext with dependency injection and updated appsettings.json to include a database connection string. Added necessary EF Core packages to the project file.

--- a/src/Services/Order/Order.Api/appsettings.json
+++ b/src/Services/Order/Order.Api/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "Database": "Data Source=(LocalDb)\\MSSQLLocalDB;Initial Catalog=OrderDb;Integrated Security=SSPI"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
