--- a/src/Services/Order/Order.Infrastructure/Order.Infrastructure.csproj
+++ b/src/Services/Order/Order.Infrastructure/Order.Infrastructure.csproj
@@ -7,11 +7,16 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\Order.Application\Order.Application.csproj"/>
+        <ProjectReference Include="..\Order.Application\Order.Application.csproj" />
     </ItemGroup>
 
     <ItemGroup>
-        <PackageReference Include="Microsoft.Extensions.Configuration" Version="8.0.0"/>
+        <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.22" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.22">
+          <PrivateAssets>all</PrivateAssets>
+          <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+        </PackageReference>
+        <PackageReference Include="Microsoft.Extensions.Configuration" Version="8.0.0" />
     </ItemGroup>
 
 </Project>
