--- a/src/docker-compose.override.yaml
+++ b/src/docker-compose.override.yaml
@@ -98,3 +98,12 @@ services:
     restart: unless-stopped
     ports:
       - "6379:6379"
+
+  orderdb:
+    container_name: orderdb
+    environment:
+      - ACCEPT_EULA=Y
+      - SA_PASSWORD=Abcd@12345
+    restart: unless-stopped
+    ports:
+      - "1433:1433"
