--- a/src/docker-compose.yaml
+++ b/src/docker-compose.yaml
@@ -29,6 +29,9 @@
   distributedcache:
     image: redis
 
+  orderdb:
+    image: mcr.microsoft.com/mssql/server
+
 volumes:
   postgres_catalog:
   postgres_basket:
