--- a/src/Services/Order/Order.Infrastructure/Order.Infrastructure.csproj
+++ b/src/Services/Order/Order.Infrastructure/Order.Infrastructure.csproj
@@ -10,6 +10,10 @@
         <ProjectReference Include="..\Order.Application\Order.Application.csproj" />
     </ItemGroup>
 
+	<ItemGroup>
+		<FrameworkReference Include="Microsoft.AspNetCore.App" />
+	</ItemGroup>
+
     <ItemGroup>
         <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.22" />
         <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.22">
