feat (order): Add update/delete order commands, validation, and behaviors
- Introduced UpdateOrder and DeleteOrder commands with handlers, validators, and result types
- Added OrderNotFoundException for missing order scenarios
- Registered ValidationBehavior and LoggingBehavior with MediatR
- Refactored ValidationBehavior to properly handle validation failures
- Improved formatting in CreateOrderCommandHandler for readability
- Enhanced validation rules in CreateOrderCommandValidator
- Updated global usings and project structure for new features

--- a/src/Services/Order/Order.Application/Order.Application.csproj
+++ b/src/Services/Order/Order.Application/Order.Application.csproj
@@ -17,6 +17,9 @@
     </ItemGroup>
 
     <ItemGroup>
+      <Folder Include="Exceptions\" />
+      <Folder Include="Orders\Commands\DeleteOrder\" />
+      <Folder Include="Orders\Commands\UpdateOrder\" />
       <Folder Include="Orders\EventHandlers\" />
       <Folder Include="Orders\Queries\" />
     </ItemGroup>
