feat(order): Implement order API endpoints and MediatR config updates
Add CreateOrder, UpdateOrder, and DeleteOrder endpoint modules with MediatR integration for command handling and HTTP responses. Stub out GetOrders, GetOrdersByName, and GetOrdersByCustomer endpoints. Add global usings for Carter, Mapster, MediatR, and DTOs. Update DependencyInjection to load MediatR license key from environment variables using DotNetEnv, and add DotNetEnv as a project dependency. Adjust Postgres volume mounts in docker-compose.override.yaml for catalogdb and basketdb.

--- a/src/docker-compose.override.yaml
+++ b/src/docker-compose.override.yaml
@@ -79,7 +79,7 @@ services:
       - "5432:5432"
     restart: unless-stopped
     volumes:
-      - postgres_catalog:/var/lib/postgresql/data
+      - postgres_catalog:/var/lib/postgresql
   
   basketdb:
     container_name: basketdb
@@ -91,7 +91,7 @@ services:
       - "5433:5432"
     restart: unless-stopped
     volumes:
-      - postgres_basket:/var/lib/postgresql/data
+      - postgres_basket:/var/lib/postgresql
   
   distributedcache:
     container_name: distributedcache
