feat(messaging): :sparkles: add messaging infrastructure with RabbitMQ support
* Introduced BuildingBlocks.Messaging project for handling messaging.
* Implemented BasketCheckoutEvent and IntegrationEvent for event-driven architecture.
* Added MassTransit configuration for RabbitMQ in the service.
* Updated appsettings.json to include MessageBroker configuration.
* Enhanced Basket.Api with checkout functionality and DTOs for basket checkout.

--- a/src/Services/Order/Order.Api/appsettings.json
+++ b/src/Services/Order/Order.Api/appsettings.json
@@ -9,5 +9,10 @@
       "Microsoft.EntityFrameworkCore.Database.Command": "Information"
     }
   },
+  "MessageBroker": {
+    "Host": "amqp://localhost:5672",
+    "Password": "guest",
+    "Username": "guest"
+  },
   "AllowedHosts": "*"
 }
