--- a/src/Services/Basket/Basket.Api/Basket.Api.csproj
+++ b/src/Services/Basket/Basket.Api/Basket.Api.csproj
@@ -8,9 +8,8 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <Folder Include="Dtos\"/>
-        <Folder Include="GrpcServices\"/>
-        <Folder Include="Protos\"/>
+        <Folder Include="GrpcServices\" />
+        <Folder Include="Protos\" />
     </ItemGroup>
 
     <ItemGroup>
@@ -20,18 +19,19 @@
     </ItemGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\..\..\BuildingBlocks\BuildingBlocks\BuildingBlocks.csproj"/>
+        <ProjectReference Include="..\..\..\BuildingBlocks\BuildingBlocks.Messaging\BuildingBlocks.Messaging.csproj" />
+        <ProjectReference Include="..\..\..\BuildingBlocks\BuildingBlocks\BuildingBlocks.csproj" />
     </ItemGroup>
 
     <ItemGroup>
-        <PackageReference Include="AspNetCore.HealthChecks.NpgSql" Version="8.0.2"/>
-        <PackageReference Include="AspNetCore.HealthChecks.Redis" Version="8.0.1"/>
-        <PackageReference Include="AspNetCore.HealthChecks.UI.Client" Version="8.0.1"/>
-        <PackageReference Include="Carter" Version="8.2.1"/>
-        <PackageReference Include="Grpc.AspNetCore" Version="2.71.0"/>
-        <PackageReference Include="Marten" Version="8.7.0"/>
-        <PackageReference Include="Microsoft.Extensions.Caching.StackExchangeRedis" Version="8.0.19"/>
-        <PackageReference Include="Scrutor" Version="6.1.0"/>
+        <PackageReference Include="AspNetCore.HealthChecks.NpgSql" Version="8.0.2" />
+        <PackageReference Include="AspNetCore.HealthChecks.Redis" Version="8.0.1" />
+        <PackageReference Include="AspNetCore.HealthChecks.UI.Client" Version="8.0.1" />
+        <PackageReference Include="Carter" Version="8.2.1" />
+        <PackageReference Include="Grpc.AspNetCore" Version="2.71.0" />
+        <PackageReference Include="Marten" Version="8.7.0" />
+        <PackageReference Include="Microsoft.Extensions.Caching.StackExchangeRedis" Version="8.0.19" />
+        <PackageReference Include="Scrutor" Version="6.1.0" />
     </ItemGroup>
 
     <ItemGroup>
