--- a/src/Services/Order/Order.Api/appsettings.json
+++ b/src/Services/Order/Order.Api/appsettings.json
@@ -14,5 +14,8 @@
     "Password": "guest",
     "Username": "guest"
   },
+  "FeatureManagement": {
+    "OrderFulfillment": true
+  },
   "AllowedHosts": "*"
 }
