feat(compose): :sparkles: add order.api and RabbitMQ services
* Introduces order.api service with environment, DB, and broker config
* Adds messagebroker service using RabbitMQ for inter-service messaging
* Updates basket.api to connect to RabbitMQ
* Enables local development and integration via message broker
* Facilitates scalable, event-driven architecture for services

--- a/src/docker-compose.yaml
+++ b/src/docker-compose.yaml
@@ -39,6 +39,9 @@
   orderdb:
     image: mcr.microsoft.com/mssql/server
 
+  messagebroker:
+    image: rabbitmq:management
+
 volumes:
   postgres_catalog:
   postgres_basket:
