--- a/src/docker-compose.override.yaml
+++ b/src/docker-compose.override.yaml
@@ -61,6 +61,8 @@ services:
       - ASPNETCORE_ENVIRONMENT=Development
       - ASPNETCORE_HTTP_PORTS=8080
       - ASPNETCORE_HTTPS_PORTS=8081
+      - Kestrel__EndPoints__WebApi__Protocols=Http1
+      - Kestrel__EndPoints__WebApi__Url=http://+:8080
       - ConnectionStrings__Database=Server=orderdb;Database=OrderDb;User Id=sa;Password=Abcd@12345;Encrypt=False;TrustServerCertificate=True
       - MessageBroker__Host=amqp://ecommerce-mq:5672
       - MessageBroker__UserName=guest
