--- a/src/ApiGateways/YarpApiGateway/YarpApiGateway.csproj
+++ b/src/ApiGateways/YarpApiGateway/YarpApiGateway.csproj
@@ -14,4 +14,8 @@
         </Content>
     </ItemGroup>
 
+    <ItemGroup>
+        <PackageReference Include="Yarp.ReverseProxy" Version="2.3.0"/>
+    </ItemGroup>
+
 </Project>
