--- a/src/ApiGateways/YarpApiGateway/appsettings.Local.json
+++ b/src/ApiGateways/YarpApiGateway/appsettings.Local.json
@@ -1,4 +1,4 @@
-{
+﻿{
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -47,21 +47,21 @@
       "catalog-cluster": {
         "Destinations": {
           "destination1": {
-            "Address": "http://catalog.api:8080"
+            "Address": "http://localhost:6000"
           }
         }
       },
       "basket-cluster": {
         "Destinations": {
           "destination1": {
-            "Address": "http://basket.api:8080"
+            "Address": "http://localhost:6001"
           }
         }
       },
       "order-cluster": {
         "Destinations": {
           "destination1": {
-            "Address": "http://order.api:8080"
+            "Address": "http://localhost:6003"
           }
         }
       }
