feat(compose): :sparkles: add YARP API Gateway service to Docker configuration
* Introduced `yarpapigateway` service in `docker-compose.override.yaml` and `docker-compose.yaml` for local development.
* Added environment variables, port mappings, and volume mounts for user secrets and HTTPS certificates.
* Updated Dockerfile for `YARP API Gateway` to use .NET 8.0 runtime and SDK images.
* Enabled `restart: unless-stopped` policy for reliable container behavior.

Signed-off-by: Abhiroop Santra <abhiroop.santra@gmail.com>

--- a/src/docker-compose.override.yaml
+++ b/src/docker-compose.override.yaml
@@ -140,7 +140,25 @@ services:
     environment:
       - RABBITMQ_DEFAULT_USER=guest
       - RABBITMQ_DEFAULT_PASS=guest
-    restart: always
+    restart: unless-stopped
     ports:
       - "5672:5672"
       - "15672:15672"
+  
+  yarpapigateway:
+    environment:
+      - ASPNETCORE_ENVIRONMENT=Development
+      - ASPNETCORE_HTTP_PORTS=8080
+      - ASPNETCORE_HTTPS_PORTS=8081
+      - Kestrel__EndPoints__WebApi__Protocols=Http1
+      - Kestrel__EndPoints__WebApi__Url=http://+:8080
+    depends_on:
+      - catalog.api
+      - basket.api
+      - order.api
+    ports:
+      - "6004:8080"
+      - "6064:8081"
+    volumes:
+      - ${HOME}/.microsoft/usersecrets:/home/app/.microsoft/usersecrets:ro
+      - ${HOME}/.aspnet/https:/home/app/.aspnet/https:ro
